--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URL=mongodb+srv://elton:QptrQOOGfBObAFII@shoppy.6hnt8cy.mongodb.net/shoppay?retryWrites=true&w=majority
+IP_REGISTRY_KEY=ir439nao8z8xweo4
