--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.2",
     "next": "12.2.3",
+    "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
