--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,9 @@
 
-# you database url
+# your database url
 MONGODB_URL=
 
 # https://ipregistry.co/ get your api key in this site
 IP_REGISTRY_KEY=
+
+JWT_SECRET=
+NEXTAUTH_URL=
