--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
+MONGODB_URL=mongodb+srv://elton:QptrQOOGfBObAFII@shoppy.6hnt8cy.mongodb.net/shoppay?retryWrites=true&w=majority
 
+IP_REGISTRY_KEY=ir439nao8z8xweo4
+
+JWT_SECRET=urfghiugherighkeirjgikerhgujergiehikhuhgh
+NEXTAUTH_URL=http://localhost:3000
+
+GITHUB_ID=4866e4dfeb28175a76c9
+GITHUB_SECRET=f4034e3cbff7440407c8dd5df2f5566229de06da
+GOOGLE_ID=897728132317-qcjb749cnpbbkjdro31m65sei9cln058.apps.googleusercontent.com
+GOOGLE_SECRET=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
+FACEBOOK_ID=981823923271737
+FACEBOOK_SECRET=2c89bfe2acea97b9902387a2130562c6
