--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "css-loader": "^6.8.1",
-    "mongodb": "^5.5.0",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "next": "12.2.3",
     "next-auth": "^4.22.1",
