add twitter provider

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ GOOGLE_ID=897728132317-qcjb749cnpbbkjdro31m65sei9cln058.apps.googleusercontent.c
 GOOGLE_SECRET=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
 FACEBOOK_ID=981823923271737
 FACEBOOK_SECRET=2c89bfe2acea97b9902387a2130562c6
+TWITTER_ID=65sRF6hWa0YDVf9fqJX6miTru
+TWITTER_SECRET=xmm79GsEAbJDCj8tmOnVwTQyJx7WjYTy3UFanLggCRfryOBhTb
