--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,12 @@ IP_REGISTRY_KEY=
 
 JWT_SECRET=
 NEXTAUTH_URL=
+
+GITHUB_ID=
+GITHUB_SECRET=
+GOOGLE_ID=
+GOOGLE_SECRET=GOCSPX-
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+TWITTER_ID=
+TWITTER_SECRET=
