--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ IP_REGISTRY_KEY=ir439nao8z8xweo4
 JWT_SECRET=urfghiugherighkeirjgikerhgujergiehikhuhgh
 NEXTAUTH_URL=http://localhost:3000
 
+# AUTH Providers
 GITHUB_ID=4866e4dfeb28175a76c9
 GITHUB_SECRET=f4034e3cbff7440407c8dd5df2f5566229de06da
 GOOGLE_ID=897728132317-qcjb749cnpbbkjdro31m65sei9cln058.apps.googleusercontent.com
@@ -13,3 +14,6 @@ FACEBOOK_ID=981823923271737
 FACEBOOK_SECRET=2c89bfe2acea97b9902387a2130562c6
 TWITTER_ID=65sRF6hWa0YDVf9fqJX6miTru
 TWITTER_SECRET=xmm79GsEAbJDCj8tmOnVwTQyJx7WjYTy3UFanLggCRfryOBhTb
+AUTH0_CLIENT_ID=7yYSCUTy0Il8teb2HtCNBOW2kiSbdfXd
+AUTH0_CLIENT_SECRET=EeFarhSosciVu1XKa-SQuacBKuT9YcmwYvV42dafwOD0V33PjY5xCfMHMMaAbhB1
+AUTH0_ISSUER=https://shoppay.eu.auth0.com
